# tone-smithy

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  about.hbs  about.toml  clippy.toml  deny.toml  instructions.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/synth-app/: Cargo.toml
crates/synth-app/src/: main.rs  update_check.rs
crates/synth-engine/: Cargo.toml
crates/synth-engine/src/: arp.rs  engine.rs  envelope.rs  events.rs  fm.rs  halfband.rs  lfo.rs  lib.rs  mod_env.rs  mod_matrix.rs  oscillator.rs  panning.rs  param_bus.rs  params.rs  seq.rs  slot.rs  smoothing.rs  voice.rs  voice_manager.rs
crates/synth-engine/src/filter/: mod.rs  svf.rs
crates/synth-engine/src/fx/: biquad.rs  chorus.rs  delay.rs  drive.rs  eq.rs  mod.rs  reverb.rs
crates/synth-engine/src/oscillator/: mod.rs  pitch.rs  polyblep.rs  subtractive.rs
crates/synth-engine/src/params/: ids.rs  mod.rs  snapshot.rs  tree.rs
crates/synth-engine/tests/: no_alloc.rs
crates/synth-host/: Cargo.toml
crates/synth-host/src/: audio.rs  lib.rs  midi.rs  param_bus.rs
crates/synth-presets/: Cargo.toml
crates/synth-presets/factory/: analog_pad.tsmith  bass_808.tsmith  bass_acid_line.tsmith  bass_amen_stab.tsmith  bass_dist_reese.tsmith  bass_drive_stack.tsmith  bass_dub_sub.tsmith  bass_fm_bell_bass.tsmith  bass_fm_bite.tsmith  bass_fm_sub_layer.tsmith  bass_formant_growl.tsmith  bass_growl.tsmith  bass_hoover.tsmith  bass_house.tsmith  bass_ladder_24.tsmith  bass_mono_tight.tsmith  bass_neuro_growl.tsmith  bass_plonk.tsmith  bass_pluck.tsmith  bass_reese.tsmith  bass_reese_mk2.tsmith  bass_rubber.tsmith  bass_sine_sub_duo.tsmith  bass_split_filter.tsmith  bass_stab.tsmith  bass_tape_warmth.tsmith  bass_upright.tsmith  bass_wobble.tsmith  bass_wool_stack.tsmith  fx_air_texture.tsmith  fx_alien_texture.tsmith  fx_dark_drone.tsmith  fx_downlifter.tsmith  fx_glitch_bell.tsmith  fx_impact.tsmith  fx_metallic.tsmith  fx_pad.tsmith  fx_riser.tsmith  fx_seq_pulse.tsmith  fx_sweep_rise.tsmith  (+80 more)
crates/synth-presets/src/: factory.rs  format.rs  io.rs  lib.rs  migrate.rs  preset_params.rs  settings.rs
crates/synth-ui/: Cargo.toml
crates/synth-ui/src/: app.rs  computer_keyboard.rs  keyboard.rs  knob.rs  lib.rs  meter.rs  midi_learn_ext.rs  theme.rs  toggle.rs
crates/synth-ui/src/app/: chrome.rs  midi_learn.rs  mod.rs  mod_display.rs  preset.rs  state.rs  utils.rs  wizard.rs
crates/synth-ui/src/sections/: arp.rs  browser.rs  envelopes.rs  filter.rs  fm_slots.rs  fx.rs  master.rs  mod.rs  modulation.rs  osc.rs  seq.rs  settings.rs
crates/synth-ui/src/sections/fx/: chorus.rs  delay.rs  drive.rs  eq.rs  mod.rs  reverb.rs
docs/: getting-started.md  user-manual.md  working-conventions.md
docs/conversations/: 2026-05-17.md  2026-05-18.md  2026-05-19.md  2026-05-25.md  2026-06-01.md  2026-06-02.md  2026-06-07.md  2026-06-08.md  2026-06-09.md  2026-06-10.md  2026-06-14.md  2026-06-15.md  2026-06-16.md  2026-06-17.md  README.md
docs/planning/: README.md
docs/planning/01-vision/: open-questions.md  overview.md  success-criteria.md
docs/planning/02-scope/: features-v1.md  out-of-scope.md  roadmap.md
docs/planning/03-architecture/: audio-engine.md  design-patterns.md  midi-and-input.md  overview.md  persistence.md  ui-layer.md
docs/planning/04-tech-stack/: code-style.md  libraries.md  stack.md  tooling.md  unit-testing.md
docs/planning/05-design/: dsp-and-sound.md  ui-design.md
docs/planning/06-implementation/: m03-plan.md  m04-plan.md  m05-plan.md  m06-plan.md  m06-test-checklist.md  m07-plan.md  m07-test-checklist.md  m08-plan.md  m08-test-checklist.md  m09-plan.md  m09-test-checklist.md  m10-plan.md  m10-test-checklist.md  m11-plan.md  m11-test-checklist.md  m12-plan.md  m13-plan.md  m14-plan.md  m15-plan.md  m16-plan.md  m17-plan.md  m17-test-checklist.md  m18-plan.md  m18-test-checklist.md  m19-plan.md  m20-plan.md  m21-plan.md  m22-plan.md  m22-test-checklist.md  m23-plan.md  m24-plan.md  milestone-closeout.md  milestones.md  project-structure.md  risks.md
docs/planning/07-distribution/: licensing.md  packaging.md
installer/: installer.iss
xtask/: Cargo.toml
xtask/src/: main.rs  migrate.rs
