[workspace]
resolver = "3"
members = [
    "crates/synth-engine",
    "crates/synth-host",
    "crates/synth-presets",
    "crates/synth-ui",
    "crates/synth-app",
    "xtask",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
publish = false
authors = ["The Tone Smithy Contributors"]

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
# Audio + MIDI I/O
cpal = "0.15"
midir = "0.10"

# Concurrency
crossbeam-channel = "0.5"
arc-swap = "1"

# Serialisation
serde = { version = "1", features = ["derive"] }
ron = "0.8"

# UI
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"

# Errors + logging
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
assert_no_alloc = "1.1"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

# Optimise dependencies even in dev so DSP work is bearable.
[profile.dev.package."*"]
opt-level = 2
