[workspace]
resolver = "3"
members = [
    "crates/synth-engine",
    "crates/synth-host",
    "crates/synth-presets",
    "crates/synth-ui",
    "crates/synth-app",
    "xtask",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
publish = false
authors = ["The Tone Smithy Contributors"]

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
# Audio + MIDI I/O
cpal = "0.15"
midir = "0.10"

# Concurrency
crossbeam-channel = "0.5"
arc-swap = "1"

# Serialisation
serde = { version = "1", features = ["derive"] }
ron = "0.8"

# UI
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
rfd = "0.15"

# User data directories
directories = "5"

# File watching (preset browser auto-refresh)
notify = "6"

# Errors + logging
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
assert_no_alloc = { version = "1.1", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1
# NB: `panic = "abort"` is deliberately NOT set. We rely on unwinding so the
# main thread can `catch_unwind` panics from the cpal WASAPI backend during a
# device switch (it `unwrap`s on COM failures) and recover instead of the OS
# aborting with STATUS_FATAL_USER_CALLBACK_EXCEPTION. The audio-thread
# "panic = abort" guarantee is enforced independently by the explicit
# `catch_unwind` -> `process::abort()` in the audio callback. See
# design-patterns.md §2.8.

# Optimise dependencies even in dev so DSP work is bearable.
[profile.dev.package."*"]
opt-level = 2
