[package]
name = "xtask"
description = "Build / packaging tasks for Tone Smithy (release artefacts, installer)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
cargo_metadata = "0.18"

[lints]
workspace = true
