[package]
name = "synth-app"
description = "Tone Smithy standalone application binary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[[bin]]
name = "tonesmithy"
path = "src/main.rs"

[dependencies]
synth-engine = { path = "../synth-engine" }
synth-host = { path = "../synth-host" }
synth-presets = { path = "../synth-presets" }
synth-ui = { path = "../synth-ui" }
eframe.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# Small synchronous HTTP client for the best-effort GitHub Releases update
# check. Runs on a dedicated background thread (it blocks), never on the UI.
ureq = { version = "2", features = ["tls"] }

[lints]
workspace = true
