[package]
name = "synth-host"
description = "Audio (cpal) and MIDI (midir) I/O for Tone Smithy. Bridges synth-engine to the OS."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
synth-engine = { path = "../synth-engine" }
cpal.workspace = true
midir.workspace = true
crossbeam-channel.workspace = true
arc-swap.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
