[package]
name = "synth-presets"
description = "Tone Smithy preset format (RON), schema migrations, and browser."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
synth-engine = { path = "../synth-engine" }
serde.workspace = true
ron.workspace = true
thiserror.workspace = true
directories.workspace = true
notify.workspace = true
tracing.workspace = true

[lints]
workspace = true
