[package]
name = "synth-ui"
description = "Tone Smithy front end (egui via eframe)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
synth-engine = { path = "../synth-engine" }
eframe.workspace = true
egui.workspace = true
tracing.workspace = true

[lints]
workspace = true
