[package]
name = "synth-ui"
description = "Tone Smithy front end (egui via eframe)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
synth-engine = { path = "../synth-engine" }
synth-host = { path = "../synth-host" }
synth-presets = { path = "../synth-presets" }
eframe.workspace = true
egui.workspace = true
rfd.workspace = true
notify.workspace = true

[lints]
workspace = true
